# firefox_decrypt

./: .all-contributorsrc  .gitignore  .tool-versions  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTORS.md  README  README.md  appveyor.yml  firefox_decrypt.py  pyproject.toml  requirements.txt  wercker.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  i-didn-t-find-documentation-for---.md  i-didn-t-find-documentation-on-how-to---.md
.github/workflows/: main.yml
appveyor/: firefox.ps1
tests/: README.md  bash_tap_fd.sh  csv.t  csv_46.t  direct_profile.t  direct_profile_20.t  direct_profile_3.t  direct_profile_46.t  direct_profile_59.t  direct_profile_non-ascii.t  direct_profile_nopass.t  handle_corrupted_passwords.t  import.t  json.t  list_profiles.t  list_single_profile.t  list_single_profile_20.t  list_single_profile_46.t  non_interactive_choice.t  non_interactive_choice_20.t  non_interactive_choice_46.t  non_interactive_choice_missing.t  non_interactive_choice_nopass.t  problems  profile_choice_46.t  profile_ini.t  profile_ini_20.t  profile_ini_3.t  profile_ini_46.t  profile_ini_59.t  profile_ini_non-ascii.t  profile_ini_nopass.t  run_all  show_encodings  tabular.t  tabular_46.t  version.t
tests/simpletap/: __init__.py  __main__.py  fdecrypt.py  result.py  runner.py  version.py
tests/test_data/: exported_passwords.csv  master_password  profiles.ini
tests/test_data/outputs/: list.output  list_fail.output  list_single_20.output  list_single_46.output  list_single_59.output  non_interactive_choice_missing.output
(+27 files in other folders)
